# xdem

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .relint.yml  .ruff.toml  AUTHORS.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HOW_TO_RELEASE.md  LICENSE  Makefile  NOTICE  README.md  Zhihao_test_on_new_coreg.ipynb  apply_license_header.py  codespell_ignore.txt  dev-environment.yml  dev-requirements.txt  environment.yml  mypy.ini  pyproject.toml  reproject_test.ipynb  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  get_yml_env_nopy.py
.github/scripts/: apply_license_header.py  generate_pip_deps_from_conda.py  generate_yml_env_fixed_py.py  get_yml_env_nopy.py  license-header.txt
.github/workflows/: cli-report-doc.yml  cli-report-for-doc.yml  doc-build.yml  pip-checks.yml  pre-commit.yml  pypi-publish.yml  python-package.yml  python-publish.yml  python-tests.yml  testpypi-publish.yml
.history/: dev-environment_20230302122644.yml  dev-environment_20230302123031.yml  dev-environment_20230302123613.yml  dev-environment_20230302123624.yml  environment_20230120012122.yml  environment_20230302123105.yml
.history/xdem/: coreg_20230119142345.py  coreg_20230120012559.py  coreg_20230120012903.py  coreg_20230120012921.py  coreg_20230120015256.py  coreg_20230302123405.py
DemUtils/: __init__.py  coreg.py  spatial_tools.py
binder/: environment.yml  extra-environment.yml  postBuild
doc/: Makefile
doc/source/: about_xdem.md  accuracy_precision.md  api.md  authors.md  background.md  biascorr.md  cheatsheet.md  citation.md  cli.md  cli_accuracy.md  cli_topo.md  comparison.md  conf.py  config.md  coregistration.md  credits.md  data.md  dem_class.md  ecosystem.md  elevation_intricacies.md  elevation_objects.md  elevation_point_cloud.md  epc_class.md  funding.md  gapfill.md  global_cli_information.md  guides.md  history.md  how_to_install.md  index.md  intro_accuracy_precision.md  intro_dems.md  intro_robuststats.md  license.md  logging.md  mission.md  profiling.md  publis.md  qgis_plugin.md  quick_start.md  (+13 more)
docs/: Makefile
docs/source/: about_xdem.md  about_xdem.rst  api.md  api.rst  biascorr.rst  comparison.md  comparison.rst  conf.py  coregistration.md  coregistration.rst  filters.md  filters.rst  first_steps.rst  how_to_install.md  how_to_install.rst  index.md  index.rst  install_xdem.rst  intro.rst  intro_accuracy_precision.rst  intro_dems.rst  intro_robuststats.rst  quick_start.rst  robuststats.rst  spatial_stats.rst  spatialstats.md  spatialstats.rst  terrain.md  terrain.rst  tutorials.rst  vertical_ref.rst  what_is_xdem.rst
examples/: README.rst  __init__.py  coregistration_example.ipynb.REMOVED.git-id  error_map.py  infer_heterosc.py  infer_spatial_correlation.py  logging_example.py  plot_blockwise_coreg.py  plot_dem_subtraction.py  plot_demcollection.py  plot_heterosc_estimation_modelling.py  plot_icp_coregistration.py  plot_infer_heterosc.py  plot_infer_spatial_correlation.py  plot_nonstationary_error.py  plot_norm_regional_hypso.py  plot_nuth_kaab.py  plot_slope_methods.py  plot_spatial_error_propagation.py  plot_standardization.py  plot_terrain_attributes.py  plot_variogram_estimation_modelling.py  plot_vgm_error.py  spatial_correlation.py  spatial_error_propagation.py
examples/Longyearbyen/: DEM_1995.tif  DEM_1995.tif.REMOVED.git-id  DEM_2009_ref.tif.REMOVED.git-id  coregistration_example.ipynb.REMOVED.git-id
examples/advanced/: README.rst  __init__.py  plot_blockwise_coreg.py  plot_demcollection.py  plot_deramp.py  plot_heterosc_estimation_modelling.py  plot_norm_regional_hypso.py  plot_slope_methods.py  plot_standardization.py  plot_variogram_estimation_modelling.py
examples/basic/: README.rst  __init__.py  logging_configuration.py  plot_3d_manipulation.ipynb  plot_3d_manipulation.py  plot_dem_subtraction.py  plot_icp_coregistration.py  plot_infer_heterosc.py  plot_infer_spatial_correlation.py  plot_logging_configuration.py  plot_nuth_kaab.py  plot_spatial_error_propagation.py  plot_terrain_attributes.py  temp.tif.aux.xml
examples/notebooks/: classification.ipynb
tests/: __init__.py  assert_function.py  conftest.py  env_failing.txt  env_working.txt  test_biascorr.py  test_cli.py  test_cluster.py  test_coreg.py  test_ddem.py  test_dem.py  test_demcollection.py  test_doc.py  test_docs.py  test_examples.py  test_filters.py  test_fit.py  test_metricspace.py  test_misc.py  test_multiproc.py  test_profiling.py  test_spatial_tools.py  test_spatialstats.py  test_spstats.py  test_terrain.py  test_vcrs.py  test_volume.py
tests/test_coreg/: __init__.py  conftest.py  test_affine.py  test_affine_manipulation.py  test_base.py  test_biascorr.py  test_block_wise_coreg.py  test_blockwise.py  test_coreg_pipeline.py  test_delayed.py  test_filters.py  test_pipeline.py  test_workflows.py
tests/test_dem/: test_base.py  test_dem.py  test_xr_accessor.py
tests/test_epc/: test_epc.py
tests/test_terrain/: test_freq.py  test_surfit.py  test_terrain.py  test_window.py
tests/test_uncertainty/: test_uncertainty.py
tests/test_workflows/: conftest.py  test_accuracy.py  test_cli.py  test_schemas.py  test_topo.py  test_workflows.py
tests/test_worklows/: conftest.py  test_accuracy.py  test_compare.py  test_diff_analysis.py  test_schemas.py  test_topo.py  test_topo_summary.py  test_workflows.py
xdem/: __init__.py  __version__.py  _metricspace.py  _misc.py  _typing.py  biascorr.py  cli.py  cluster.py  coreg.py  cosampling.py  ddem.py  dem.py  demcollection.py  examples.py  filters.py  fit.py  geogrid.py  misc.py  multiproc.py  profiler.py  spatial_tools.py  spatialstats.py  spstats.py  terrain.py  vcrs.py  volume.py  xdem_cli.py
xdem/coreg/: __init__.py  affine.py  base.py  biascorr.py  blockwise.py  delayed.py  filters.py  pipeline.py  pipelines.py  scaled_blockwise.py  workflows.py
xdem/dem/: __init__.py  base.py  dem.py  xr_accessor.py
xdem/epc/: __init__.py  epc.py
xdem/terrain/: __init__.py  freq.py  freqidx.py  surfit.py  terrain.py  windidx.py  window.py
(+85 files in other folders)
