[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=8,<9.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

# To write version to file
[tool.setuptools_scm]
version_file = "xdem/_version.py"
fallback_version = "0.0.1"
# Use no-local-version by default for CI builds
local_scheme = "no-local-version"

[tool.black]
target_version = ['py310']

[tool.pytest.ini_options]
addopts = "--doctest-modules -W error::UserWarning"
testpaths = [
	"tests",
	"xdem"
]
