[metadata]
author = The GlacioHack Team
name = xdem
version = attr: xdem.__version__
description = Analysis of digital elevation models (DEMs)
keywords = dem, elevation, geoutils, xarray
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/GlacioHack/xdem
download_url = https://pypi.org/project/xdem/

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
include_package_data = True
python_requires = >=3.8
# Avoid pinning dependencies in requirements.txt (which we don't do anyways, and we rely mostly on Conda)
# (https://caremad.io/posts/2013/07/setup-vs-requirement/, https://github.com/pypa/setuptools/issues/1951)
install_requires = file: requirements.txt

[options.package_data]
xdem =
    py.typed

[options.packages.find]
include = xdem*

[options.extras_require]
opt =
    richdem
    noisyopt
    opencv
    openh264
    pytransform3d
doc =
    graphviz
    autovizwidget
    myst-nb
    numpydoc
    sphinx
    sphinx-book-theme
    sphinxcontrib-programoutput
    sphinx-design
    sphinx-autodoc-typehints
    sphinx-gallery
test =
    pytest
    pytest-xdist
    pyyaml
    flake8
    pylint
dev =
    %(opt)s
    %(doc)s
    %(test)s
all =
    %(dev)s
