[metadata]
author = xDEM developers
name = xdem
version = 0.2.0
description = Analysis of digital elevation models and elevation point clouds
keywords = dem, elevation, geoutils, xarray
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/GlacioHack/xdem
download_url = https://pypi.org/project/xdem/

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
include_package_data = True
python_requires = >=3.10,<3.14
# Avoid pinning dependencies in requirements.txt (which we don't do anyways, and we rely mostly on Conda)
# (https://caremad.io/posts/2013/07/setup-vs-requirement/, https://github.com/pypa/setuptools/issues/1951)
install_requires = file: requirements.txt

[options.package_data]
xdem =
    py.typed

[options.packages.find]
include =
    xdem
    xdem.*

[options.extras_require]
opt =
    numba
    matplotlib
    scikit-learn
    scikit-gstat>=1.0.18
    laspy[lazrs]
    cerberus
    pyyaml
    weasyprint
test =
    pytest
    pytest-xdist
    pytest-instafail
    pytest-socket
    pytest-cov
    coveralls
    flake8
    pylint
    pre-commit
doc =
    sphinx
    sphinx-book-theme
    sphinxcontrib-programoutput
    sphinx-design
    sphinx-autodoc-typehints
    sphinx-gallery
    autovizwidget
    graphviz
    myst-nb
    numpydoc
    sphinx-tabs
dev =
    %(opt)s
    %(doc)s
    %(test)s
all =
    %(dev)s

[options.entry_points]
console_scripts =
    xdem = xdem.cli:main
